src/generated/HTMLParser.java
// Generated from E:/forth year/COMP/src\HTMLParser.g4 by ANTLR 4.8
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		OPEN_MUSTACHE=1, HTML_COMMENT=2, HTML_CONDITIONAL_COMMENT=3, XML=4, CDATA=5, 
		DTD=6, SCRIPTLET=7, SEA_WS=8, SCRIPT_OPEN=9, STYLE_OPEN=10, TAG_OPEN=11, 
		HTML_TEXT=12, CP_APP=13, CP_SHOW=14, CP_HIDE=15, CP_FOR=16, CP_SWITCH=17, 
		CP_SWITCH_CASE=18, CP_IF=19, CP_MODEL=20, CP_CLICK=21, CP_MOUSEOVER=22, 
		CP_SWITCH_DEF=23, TAG_CLOSE=24, TAG_SLASH_CLOSE=25, TAG_SLASH=26, TAG_EQUALS=27, 
		TAG_NAME=28, TAG_WHITESPACE=29, SCRIPT_BODY=30, SCRIPT_SHORT_BODY=31, 
		STYLE_BODY=32, STYLE_SHORT_BODY=33, ATTVALUE_VALUE=34, ATTRIBUTE=35, CP_EQUALS=36, 
		CP_OPEN_DOUBLE_QUOTE=37, CP_WS=38, CP_CONTENT_CLOSE_DOUBLE_QUOTE=39, CP_CONTENT_EQUALS=40, 
		CP_CONTENT_SEMI_COLON=41, CP_CONTENT_COLON=42, CP_CONTENT_COMMA=43, CP_CONTENT_OPEN_PAR=44, 
		CP_CONTENT_CLOSE_PAR=45, CP_CONTENT_OPEN_CURLY_BRACKETS=46, CP_CONTENT_CLOSE_CURLY_BRACKETS=47, 
		CP_CONTENT_OPEN_BRACKETS=48, CP_CONTENT_CLOSE_BRACKETS=49, CP_CONTENT_DOT=50, 
		CP_CONTENT_SINGLE_QUOTE=51, CP_CONTENT_QUESTION_MARK=52, CP_CONTENT_OR=53, 
		CP_CONTENT_AND=54, CP_CONTENT_NOT=55, IN=56, INDEX=57, CP_CONTENT_TRUE=58, 
		CP_CONTENT_FALSE=59, CP_CONTENT_NULL=60, CP_CONTENT_IDENTIFIER=61, CP_CONTENT_NUMBER=62, 
		CP_CONTENT_STRING=63, CP_CONTENT_GREATER_THAN=64, CP_CONTENT_LESS_THAN=65, 
		CP_CONTENT_GREATER_EQ=66, CP_CONTENT_LESS_EQ=67, CP_CONTENT_EQUAL_TO=68, 
		CP_CONTENT_NOT_EQUAL=69, CP_CONTENT_WS=70, CLOSE_MUSTACHE=71, MUSTACHE_FILTER=72, 
		MUSTACHE_EUQALS=73, MUSTACHE_COLON=74, MUSTACHE_QUESTION_MARK=75, MUSTACHE_GREATER_THAN=76, 
		MUSTACHE_LESS_THAN=77, MUSTACHE_GREATER_EQ=78, MUSTACHE_LESS_EQ=79, MUSTACHE_EQUAL_TO=80, 
		MUSTACHE_NOT_EQUAL=81, MUSTACHE_TRUE=82, MUSTACHE_FALSE=83, MUSTACHE_NULL=84, 
		MUSTACHE_STRING=85, MUSTACHE_NUMBER=86, MUSTACHE_IDENTIFIER=87, MUSTACHE_WS=88;
	public static final int
		RULE_htmlDocument = 0, RULE_scriptletOrSeaWs = 1, RULE_htmlElements = 2, 
		RULE_htmlElement = 3, RULE_htmlContent = 4, RULE_htmlAttribute = 5, RULE_htmlChardata = 6, 
		RULE_htmlMisc = 7, RULE_htmlComment = 8, RULE_mustacheExpression = 9, 
		RULE_ashmExpression = 10, RULE_forExpression = 11, RULE_switchExpression = 12, 
		RULE_switchCaseExpression = 13, RULE_ifExpression = 14, RULE_annotationExpression = 15, 
		RULE_variable = 16, RULE_variableName = 17, RULE_objName = 18, RULE_objBody = 19, 
		RULE_objArray = 20, RULE_arrName = 21, RULE_property = 22, RULE_pair = 23, 
		RULE_key = 24, RULE_value = 25, RULE_functionCall = 26, RULE_functionName = 27, 
		RULE_parameters = 28, RULE_parameter = 29, RULE_parameterName = 30, RULE_comparisonExpression = 31, 
		RULE_booleanExpression = 32, RULE_comparisonOperator = 33, RULE_booleanOperator = 34, 
		RULE_array = 35, RULE_oneLineCondition = 36, RULE_mustacheComparisonExpression = 37, 
		RULE_mustacheVariable = 38, RULE_mustacheComparisonOperator = 39, RULE_mustacheValue = 40, 
		RULE_ifTrue = 41, RULE_ifFalse = 42, RULE_filter = 43, RULE_modelName = 44, 
		RULE_formatName = 45, RULE_formatType = 46, RULE_script = 47, RULE_style = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"htmlDocument", "scriptletOrSeaWs", "htmlElements", "htmlElement", "htmlContent", 
			"htmlAttribute", "htmlChardata", "htmlMisc", "htmlComment", "mustacheExpression", 
			"ashmExpression", "forExpression", "switchExpression", "switchCaseExpression", 
			"ifExpression", "annotationExpression", "variable", "variableName", "objName", 
			"objBody", "objArray", "arrName", "property", "pair", "key", "value", 
			"functionCall", "functionName", "parameters", "parameter", "parameterName", 
			"comparisonExpression", "booleanExpression", "comparisonOperator", "booleanOperator", 
			"array", "oneLineCondition", "mustacheComparisonExpression", "mustacheVariable", 
			"mustacheComparisonOperator", "mustacheValue", "ifTrue", "ifFalse", "filter", 
			"modelName", "formatName", "formatType", "script", "style"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{{'", null, null, null, null, null, null, null, null, null, "'<'", 
			null, "'cp-app'", "'cp-show'", "'cp-hide'", "'cp-for'", "'cp-switch'", 
			"'cp-switch-case'", "'cp-if'", "'cp-model'", "'@click'", "'@mouseover'", 
			"'cp-switchDefault'", "'>'", "'/>'", "'/'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'''", null, null, null, null, 
			"'in'", "'index'", null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'}}'", "'|'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "OPEN_MUSTACHE", "HTML_COMMENT", "HTML_CONDITIONAL_COMMENT", "XML", 
			"CDATA", "DTD", "SCRIPTLET", "SEA_WS", "SCRIPT_OPEN", "STYLE_OPEN", "TAG_OPEN", 
			"HTML_TEXT", "CP_APP", "CP_SHOW", "CP_HIDE", "CP_FOR", "CP_SWITCH", "CP_SWITCH_CASE", 
			"CP_IF", "CP_MODEL", "CP_CLICK", "CP_MOUSEOVER", "CP_SWITCH_DEF", "TAG_CLOSE", 
			"TAG_SLASH_CLOSE", "TAG_SLASH", "TAG_EQUALS", "TAG_NAME", "TAG_WHITESPACE", 
			"SCRIPT_BODY", "SCRIPT_SHORT_BODY", "STYLE_BODY", "STYLE_SHORT_BODY", 
			"ATTVALUE_VALUE", "ATTRIBUTE", "CP_EQUALS", "CP_OPEN_DOUBLE_QUOTE", "CP_WS", 
			"CP_CONTENT_CLOSE_DOUBLE_QUOTE", "CP_CONTENT_EQUALS", "CP_CONTENT_SEMI_COLON", 
			"CP_CONTENT_COLON", "CP_CONTENT_COMMA", "CP_CONTENT_OPEN_PAR", "CP_CONTENT_CLOSE_PAR", 
			"CP_CONTENT_OPEN_CURLY_BRACKETS", "CP_CONTENT_CLOSE_CURLY_BRACKETS", 
			"CP_CONTENT_OPEN_BRACKETS", "CP_CONTENT_CLOSE_BRACKETS", "CP_CONTENT_DOT", 
			"CP_CONTENT_SINGLE_QUOTE", "CP_CONTENT_QUESTION_MARK", "CP_CONTENT_OR", 
			"CP_CONTENT_AND", "CP_CONTENT_NOT", "IN", "INDEX", "CP_CONTENT_TRUE", 
			"CP_CONTENT_FALSE", "CP_CONTENT_NULL", "CP_CONTENT_IDENTIFIER", "CP_CONTENT_NUMBER", 
			"CP_CONTENT_STRING", "CP_CONTENT_GREATER_THAN", "CP_CONTENT_LESS_THAN", 
			"CP_CONTENT_GREATER_EQ", "CP_CONTENT_LESS_EQ", "CP_CONTENT_EQUAL_TO", 
			"CP_CONTENT_NOT_EQUAL", "CP_CONTENT_WS", "CLOSE_MUSTACHE", "MUSTACHE_FILTER", 
			"MUSTACHE_EUQALS", "MUSTACHE_COLON", "MUSTACHE_QUESTION_MARK", "MUSTACHE_GREATER_THAN", 
			"MUSTACHE_LESS_THAN", "MUSTACHE_GREATER_EQ", "MUSTACHE_LESS_EQ", "MUSTACHE_EQUAL_TO", 
			"MUSTACHE_NOT_EQUAL", "MUSTACHE_TRUE", "MUSTACHE_FALSE", "MUSTACHE_NULL", 
			"MUSTACHE_STRING", "MUSTACHE_NUMBER", "MUSTACHE_IDENTIFIER", "MUSTACHE_WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class HtmlDocumentContext extends ParserRuleContext {
		public List<ScriptletOrSeaWsContext> scriptletOrSeaWs() {
			return getRuleContexts(ScriptletOrSeaWsContext.class);
		}
		public ScriptletOrSeaWsContext scriptletOrSeaWs(int i) {
			return getRuleContext(ScriptletOrSeaWsContext.class,i);
		}
		public TerminalNode XML() { return getToken(HTMLParser.XML, 0); }
		public TerminalNode DTD() { return getToken(HTMLParser.DTD, 0); }
		public List<HtmlElementsContext> htmlElements() {
			return getRuleContexts(HtmlElementsContext.class);
		}
		public HtmlElementsContext htmlElements(int i) {
			return getRuleContext(HtmlElementsContext.class,i);
		}
		public HtmlDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterHtmlDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitHtmlDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitHtmlDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlDocumentContext htmlDocument() throws RecognitionException {
		HtmlDocumentContext _localctx = new HtmlDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_htmlDocument);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(98);
					scriptletOrSeaWs();
					}
					} 
				}
				setState(103);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==XML) {
				{
				setState(104);
				match(XML);
				}
			}

			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(107);
					scriptletOrSeaWs();
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DTD) {
				{
				setState(113);
				match(DTD);
				}
			}

			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(116);
					scriptletOrSeaWs();
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_MUSTACHE) | (1L << HTML_COMMENT) | (1L << HTML_CONDITIONAL_COMMENT) | (1L << SCRIPTLET) | (1L << SEA_WS) | (1L << SCRIPT_OPEN) | (1L << STYLE_OPEN) | (1L << TAG_OPEN))) != 0)) {
				{
				{
				setState(122);
				htmlElements();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ScriptletOrSeaWsContext extends ParserRuleContext {
		public TerminalNode SCRIPTLET() { return getToken(HTMLParser.SCRIPTLET, 0); }
		public TerminalNode SEA_WS() { return getToken(HTMLParser.SEA_WS, 0); }
		public ScriptletOrSeaWsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scriptletOrSeaWs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterScriptletOrSeaWs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitScriptletOrSeaWs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitScriptletOrSeaWs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ScriptletOrSeaWsContext scriptletOrSeaWs() throws RecognitionException {
		ScriptletOrSeaWsContext _localctx = new ScriptletOrSeaWsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_scriptletOrSeaWs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_la = _input.LA(1);
			if ( !(_la==SCRIPTLET || _la==SEA_WS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HtmlElementsContext extends ParserRuleContext {
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public List<HtmlMiscContext> htmlMisc() {
			return getRuleContexts(HtmlMiscContext.class);
		}
		public HtmlMiscContext htmlMisc(int i) {
			return getRuleContext(HtmlMiscContext.class,i);
		}
		public HtmlElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterHtmlElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitHtmlElements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitHtmlElements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementsContext htmlElements() throws RecognitionException {
		HtmlElementsContext _localctx = new HtmlElementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_htmlElements);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << HTML_COMMENT) | (1L << HTML_CONDITIONAL_COMMENT) | (1L << SEA_WS))) != 0)) {
				{
				{
				setState(130);
				htmlMisc();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136);
			htmlElement();
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(137);
					htmlMisc();
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HtmlElementContext extends ParserRuleContext {
		public List<TerminalNode> TAG_OPEN() { return getTokens(HTMLParser.TAG_OPEN); }
		public TerminalNode TAG_OPEN(int i) {
			return getToken(HTMLParser.TAG_OPEN, i);
		}
		public List<TerminalNode> TAG_NAME() { return getTokens(HTMLParser.TAG_NAME); }
		public TerminalNode TAG_NAME(int i) {
			return getToken(HTMLParser.TAG_NAME, i);
		}
		public List<TerminalNode> TAG_CLOSE() { return getTokens(HTMLParser.TAG_CLOSE); }
		public TerminalNode TAG_CLOSE(int i) {
			return getToken(HTMLParser.TAG_CLOSE, i);
		}
		public TerminalNode TAG_SLASH_CLOSE() { return getToken(HTMLParser.TAG_SLASH_CLOSE, 0); }
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public HtmlContentContext htmlContent() {
			return getRuleContext(HtmlContentContext.class,0);
		}
		public TerminalNode TAG_SLASH() { return getToken(HTMLParser.TAG_SLASH, 0); }
		public TerminalNode SCRIPTLET() { return getToken(HTMLParser.SCRIPTLET, 0); }
		public ScriptContext script() {
			return getRuleContext(ScriptContext.class,0);
		}
		public StyleContext style() {
			return getRuleContext(StyleContext.class,0);
		}
		public MustacheExpressionContext mustacheExpression() {
			return getRuleContext(MustacheExpressionContext.class,0);
		}
		public HtmlElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterHtmlElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitHtmlElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitHtmlElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HtmlElementContext htmlElement() throws RecognitionException {
		HtmlElementContext _localctx = new HtmlElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_htmlElement);
		int _la;
		try {
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TAG_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				match(TAG_OPEN);
				setState(144);
				match(TAG_NAME);
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CP_APP) | (1L << CP_SHOW) | (1L << CP_HIDE) | (1L << CP_FOR) | (1L << CP_SWITCH) | (1L << CP_SWITCH_CASE) | (1L << CP_IF) | (1L << CP_MODEL) | (1L << CP_CLICK) | (1L << CP_MOUSEOVER) | (1L << CP_SWITCH_DEF) | (1L << TAG_NAME))) != 0)) {
					{
					{
					setState(145);
					htmlAttribute();
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(161);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TAG_CLOSE:
					{
					setState(151);
					match(TAG_CLOSE);
					setState(158);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(152);
						htmlContent();
						setState(153);
						match(TAG_OPEN);
						setState(154);
						match(TAG_SLASH);
						setState(155);
						match(TAG_NAME);
						setState(156);
						match(TAG_CLOSE);
						}
						break;
					}
					}
					break;
				case TAG_SLASH_CLOSE:
					{
					setState(160);
					match(TAG_SLASH_CLOSE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case SCRIPTLET:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				match(SCRIPTLET);
				}
				break;
			case SCRIPT_OPEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(164);
				script();
				}
				break;
			case STYLE_OPEN:
				enterOuterAlt(_localctx, 4);
				{
				setState(165);
				style();
				}
				break;
			case OPEN_MUSTACHE:
				enterOuterAlt(_localctx, 5);
				{
				setState(166);
				mustacheExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
